# clingen-ingest

./: .copier-answers.yml  .cruft.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  download.yaml  justfile  mkdocs.yaml  pyproject.toml
.github/workflows/: create-release.yaml  release.yaml  test.yaml
docs/: 404.html  edges_report.tsv  index.html  index.md  nodes_report.tsv  objects.inv  sitemap.xml
docs/search/: search_index.json
scripts/: aggregate_gene_disease.py  generate-rdf.py  generate-report.py  get-latest-report.py  write_metadata.py
src/: clingen_variant_transform.py  clingen_variant_transform.yaml  gene_disease_transform.py  gene_disease_transform.yaml  hgnc_gene_lookup.yaml  versions.py
src/clingen_ingest/: __init__.py  cli.py  download.yaml  gene_disease_transform.py  gene_disease_transform.yaml  hgnc_gene_lookup.yaml  metadata.yaml  transform.py  transform.yaml
tests/: test_example.py  test_gene_disease_transform.py  test_transform.py
